--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+html {
   scroll-behavior: smooth;
   overflow-x: hidden!important;
-
 }
+
 a {
   text-decoration: none!important;
 
